fix to static top nav and scrollable content area overlapping

--- a/dashboard/public/assets/css/newdashboard.css
+++ b/dashboard/public/assets/css/newdashboard.css
@@ -10079,7 +10079,7 @@ html.db-NewChrome .bs-ContentSection .bs-Tail--short {
     z-index: 0;
 }
 .db-World-contentPane {
-    padding-top: 68px;
+    padding-top: 18px;
     position: relative;
 }
 @media only screen and (max-width: 1410px) {
